--- a/css/styles.css
+++ b/css/styles.css
@@ -1,1 +1,59 @@
-/* developer styles go here */
+body {
+    font-family: sans-serif;
+}
+
+header {
+    max-width: 58rem;
+    margin: 0 auto;
+}
+
+/* Step 1: style all the menu links showing on the smallest screen */
+
+ul.menu {
+    background-color: #191919;
+}
+
+ul.menu a {
+    color:#f5f5f5;
+    text-transform: uppercase;
+    display: block;
+    padding: 1rem;
+}
+
+ul.menu a:hover,
+ul.menu a:active {
+    background-color: #262626;
+    border-radius: 5px;
+}
+
+ul.dropdown-menu {
+    padding: 0 1rem;
+}
+
+ul.dropdown-menu a {
+    text-decoration: none;
+}
+
+@media only screen and (min-width:40rem) {
+    ul.menu {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    ul.menu li {
+        flex-grow: 1;
+        flex-shrink: 0;
+        flex-basis: auto;
+        white-space: nowrap;
+    }
+    ul.dropdown-menu {
+        position:absolute;
+        background-color: #191919;
+        display: none;
+        padding: 0;
+    }
+
+    ul.menu li:hover ul.dropdown-menu  {
+        display: initial;
+    }
+}
