--- a/css/styles.css
+++ b/css/styles.css
@@ -45,15 +45,37 @@ ul.dropdown-menu a {
         flex-shrink: 0;
         flex-basis: auto;
         white-space: nowrap;
-    }
-    ul.dropdown-menu {
-        position:absolute;
-        background-color: #191919;
-        display: none;
-        padding: 0;
+        text-align: center;
+        position: relative;
+        
     }
 
-    ul.menu li:hover ul.dropdown-menu  {
-        display: initial;
+    ul.dropdown-menu {
+        padding: 0;
+        position:absolute;
+        background-color: #191919;
+        border-radius: 0 0 5px 5px;
+        left: 0;
+        visibility: hidden;
+        opacity: 0;
+        /* adding transition effects to the ul dropdown-menu, show/hide smoothly */
+        transition: all 0.3s ease;
     }
+
+    ul.menu li:hover > ul  {
+        visibility: visible;
+        opacity: 1;
+    }
+
+    /* This adds accesibility for screen readers */
+    ul.menu li:focus-within > ul,
+    ul.menu li > ul:focus {
+        visibility: visible;
+        opacity: 1;
+        display: block;
+    }
+
+    
+
+
 }
